cabal-version:   3.0
name:            network-control
version:         0.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      kazu@iij.ad.jp
author:          Kazu Yamamoto
synopsis:        Network control
category:        Network
build-type:      Simple
extra-doc-files: Changelog.md

library
    exposed-modules:  Network.Control
    other-modules:    Network.Control.Rate
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.1.0,
        unix-time
