cabal-version:   3.0
name:            network-control
version:         0.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      kazu@iij.ad.jp
author:          Kazu Yamamoto
synopsis:        Library to control network protocols
description:     Common parts to control network protocols
category:        Network
build-type:      Simple
extra-doc-files: Changelog.md

library
    exposed-modules:  Network.Control
    other-modules:    Network.Control.Rate
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.15 && <5,
        unix-time
